--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="username"><span style="display:none;">null</span>@nguyenhoangvi000</div>
         <div id="userbio">Vi Hoang</div>
-        <div id="userbio">Senior Developer</div>
+        <div id="userbio">Senior JavaScript Developer</div>
         <div id="about">
             <span><i class="fas fa-envelope"></i> &nbsp; nguyenhoangvi000@gmail.com</span>
             <span><i class="fas fa-link"></i> &nbsp; https://vihoang.github.io/</span>
@@ -43,7 +43,7 @@
                                 business analyst, and project managers in Vietnam.</span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
@@ -57,7 +57,7 @@
                                 make the right decisions.</span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
@@ -70,7 +70,7 @@
                             <span>Digital learning for everyone. All digital learning materials and learning resources in one place, Schools is the easiest way to work digitally in school.</span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
@@ -83,7 +83,7 @@
                             <span>Wizy helps develop digital business more efficiently, powered by Vietnamese digital top talents. We focus on Web Development, App Development and UI Design with highly proficiency.</span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
@@ -96,7 +96,7 @@
                             <span>Calligraphy came to Shiba by chance. When I was still a graphic designer, Shiba was given a pretty fancy pen from one of my brothers, which changed the entire life Shiba since then.</span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                            <span><i class="fas fa-code"></i>&nbsp; Wordpress</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
@@ -109,7 +109,7 @@
                             <span>Create epic apps without coding. Quickly build custom apps for iOS and Android without compromising on quality or design.</span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
