--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="userbio">Senior JavaScript Developer</div>
         <div id="about">
             <span><i class="fas fa-envelope"></i> &nbsp; nguyenhoangvi000@gmail.com</span>
-            <span><i class="fas fa-link"></i> &nbsp; https://vihoang.github.io/</span>
+            <span><i class="fas fa-link"></i> &nbsp; https://nguyenhoangvi000.github.io/</span>
             <span><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Ho Chi Minh, Vietnam</span>
             <span><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span></div>
     </div>
