--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     </div>
     <div id="display">
         <div id="work">
-            <h1>Coding and always will be...</h1>
-            <h2>My Work.</h1>
+            <h1>Coding and always will be...<span class="blinker"></span></h1>
+            <br/>
+            <h1>My Work</h1>
             <div class="projects" id="work_section">
                 <a href="https://wizylance.com/" target="_blank">
                     <section>
