--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="work">
             <h1>Coding and always will be...<span class="blinker"></span></h1>
             <br/>
-            <h1>My Work</h1>
+            <h1>_My Work_</h1>
             <div class="projects" id="work_section">
                 <a href="https://wizylance.com/" target="_blank">
                     <section>
