--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="username"><span style="display:none;">null</span>@nguyenhoangvi000</div>
         <div id="userbio">Vi Hoang</div>
-        <div id="userbio">Senior JavaScript Developer</div>
+        <div id="userbio">Senior Full Stack Developer</div>
         <div id="about">
             <span><i class="fas fa-envelope"></i> &nbsp; nguyenhoangvi000@gmail.com</span>
             <span><i class="fas fa-link"></i> &nbsp; https://nguyenhoangvi000.github.io/</span>
