--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             <hr />
             <h1 class="my-work">My Work.</h1>
             <div class="projects" id="work_section">
-                <a href="https://wizylance.com/" target="_blank">
+                <a href="https://www.loowatt.com" target="_blank">
                     <section>
-                        <div class="section_title">Wizylance</div>
+                        <div class="section_title">Loowatt</div>
                         <div class="about_section">
-                            <span>WizyLance is an exclusive network of the top freelance software developers, designers,
-                                business analyst, and project managers in Vietnam.</span>
+                            <span>A platform to help gather and transmit information between customers and providers.</span>
                         </div>
                         <div class="bottom_section">
-                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
+                            <span><i class="fas fa-code"></i>&nbsp; Cordova</span>
+                            <span><i class="fas fa-code"></i>&nbsp; AngularJS</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
@@ -56,22 +56,7 @@
                     <section>
                         <div class="section_title">Sercurity Selfie</div>
                         <div class="about_section">
-                            <span>Take the IT security of your company into your own hands. Security Selfie helps you to
-                                make the right decisions.</span>
-                        </div>
-                        <div class="bottom_section">
-                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                        </div>
-                    </section>
-                </a>
-                <a href="https://skolon.com/" target="_blank">
-                    <section>
-                        <div class="section_title">Skolon</div>
-                        <div class="about_section">
-                            <span>Digital learning for everyone. All digital learning materials and learning resources
-                                in one place, Schools is the easiest way to work digitally in school.</span>
+                            <span>This is an internal tool to evaluate security for an organization/business.</span>
                         </div>
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
@@ -90,6 +75,36 @@
                         </div>
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
+                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                        </div>
+                    </section>
+                </a>
+                <a href="https://wizylance.com/" target="_blank">
+                    <section>
+                        <div class="section_title">Wizylance</div>
+                        <div class="about_section">
+                            <span>WizyLance is an exclusive network of the top freelance software developers, designers,
+                                business analyst, and project managers in Vietnam.</span>
+                        </div>
+                        <div class="bottom_section">
+                            <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
+                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                        </div>
+                    </section>
+                </a>
+                <a href="https://skolon.com/" target="_blank">
+                    <section>
+                        <div class="section_title">Skolon</div>
+                        <div class="about_section">
+                            <span>Digital learning for everyone. All digital learning materials and learning resources
+                                in one place, Schools is the easiest way to work digitally in school.</span>
+                        </div>
+                        <div class="bottom_section">
+                            <span><i class="fas fa-code"></i>&nbsp; Ember.JS</span>
+                            <span><i class="fas fa-code"></i>&nbsp; PHP</span>
+                            <span><i class="fas fa-code"></i>&nbsp; Java</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
                             <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
