Update profile info

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div id="userbio">Vi Hoang</div>
         <div id="userbio">Senior Full Stack Developer</div>
         <div id="about">
-            <span><i class="fas fa-envelope"></i> &nbsp; nguyenhoangvi000@gmail.com</span>
-            <span><i class="fas fa-link"></i> &nbsp; https://nguyenhoangvi000.github.io/</span>
-            <span><i class="fas fa-phone"></i> &nbsp; +84 586 076 440</span>
+            <span><i class="fas fa-envelope"></i> &nbsp; <a style="color:white" href="mailto:vihoang.dev@gmail.com">vihoang.dev@gmail.com</a></span>
+            <span><i class="fas fa-link"></i> &nbsp; <a style="color:white" href="https://nguyenhoangvi000.github.io/">https://nguyenhoangvi000.github.io/</a></span>
+            <span><i class="fas fa-phone"></i> &nbsp; <a style="color:white" href="tel:+84586076440">+84 586 076 440</a></span>
             <span><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Ho Chi Minh, Vietnam</span>
             <span><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span></div>
     </div>
@@ -38,6 +38,31 @@
             <hr />
             <h1 class="my-work">My Work.</h1>
             <div class="projects" id="work_section">
+                <a href="https://www.holidayextras.com/" target="_blank">
+                    <section>
+                        <div class="section_title">Holiday Extras</div>
+                        <div class="about_section">
+                            <span>Book all holiday extras with award-winning services, including airport parking, airport hotels, airport lounge passes, travel insurance, car hire, airport.</span>
+                        </div>
+                        <div class="bottom_section">
+                            <span><i class="fas fa-code"></i>&nbsp; NodeJS</span>
+                            <span><i class="fas fa-code"></i>&nbsp; Mocha</span>
+                            <span><i class="fas fa-code"></i>&nbsp; gRPC</span>
+                        </div>
+                    </section>
+                </a>
+                <a href="https://6bit.co.uk/" target="_blank">
+                    <section>
+                        <div class="section_title">6bit</div>
+                        <div class="about_section">
+                            <span>6bit platform reduces grading times and increases feedback given.</span>
+                        </div>
+                        <div class="bottom_section">
+                            <span><i class="fas fa-code"></i>&nbsp; GuppyJS</span>
+                            <span><i class="fas fa-code"></i>&nbsp; ReactJS</span>
+                        </div>
+                    </section>
+                </a>
                 <a href="https://www.loowatt.com" target="_blank">
                     <section>
                         <div class="section_title">Loowatt</div>
@@ -47,8 +72,6 @@
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; Cordova</span>
                             <span><i class="fas fa-code"></i>&nbsp; AngularJS</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
                     </section>
                 </a>
@@ -60,8 +83,6 @@
                         </div>
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
                     </section>
                 </a>
@@ -75,8 +96,6 @@
                         </div>
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
                     </section>
                 </a>
@@ -89,8 +108,6 @@
                         </div>
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
                     </section>
                 </a>
@@ -105,8 +122,6 @@
                             <span><i class="fas fa-code"></i>&nbsp; Ember.JS</span>
                             <span><i class="fas fa-code"></i>&nbsp; PHP</span>
                             <span><i class="fas fa-code"></i>&nbsp; Java</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
                     </section>
                 </a>
@@ -120,8 +135,6 @@
                         </div>
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; Wordpress</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
                     </section>
                 </a>
@@ -134,8 +147,6 @@
                         </div>
                         <div class="bottom_section">
                             <span><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                         </div>
                     </section>
                 </a>
