--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="userbio">Vi Hoang</div>
         <div id="userbio">Senior Full Stack Developer</div>
         <div id="about">
-            <span><i class="fas fa-envelope"></i> &nbsp; <a style="color:white" href="mailto:vihoang.dev@gmail.com">vihoang.dev@gmail.com</a></span>
+            <span><i class="fas fa-envelope"></i> &nbsp; <a style="color:white" href="mailto:nguyenhoangvi000@gmail.com">nguyenhoangvi000@gmail.com</a></span>
             <span><i class="fas fa-link"></i> &nbsp; <a style="color:white" href="https://nguyenhoangvi000.github.io/">https://nguyenhoangvi000.github.io/</a></span>
             <span><i class="fas fa-phone"></i> &nbsp; <a style="color:white" href="tel:+84586076440">+84 586 076 440</a></span>
             <span><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Ho Chi Minh, Vietnam</span>
